modified:   client/public/homes.html

--- a/client/public/homes.html
+++ b/client/public/homes.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="homes.css">
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-	<title>Realator</title>
+	<title>Realtor</title>
 </head>
 
 <body class="homePage">
 	<div class="wrapper bs4">
-        <h4><a href="index.html">Home</a></h4>
+        <h4><a href="/">Home</a></h4>
         <section class="clp-section clp-section-wts">
             <div class="d-flex w-100 realator blue-bar <!-- Color -->-bg justify-content-center">
                 <h2 class="mb-0">Realtors Pending for Passions</h2>
