--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello!!!!!</h1>
-    <h4><a href="homes.html">Homes</a></h4>
+    <h1>Map</h1>
+    <h1><a href="homes.html">Home Types</a></h1>
     <div id="map"></div>
 </body>
 </html>
