--- a/client/public/Rural.html
+++ b/client/public/Rural.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-    <div class="wrapper bs4-man">
+    <div class="wrapper bs4-rur">
         <section class="clp-section clp-section-wts">
             <div class="d-flex w-100 realator blue-bar -bg justify-content-center">
                 <h2 class="mb-0">Realtors Pending for Passions</h2>
             </div>
 
             <div class="container mt-2">
-                <p>Mansions are large, luxurious residential properties characterized by classy designs, high-quality materials, magnificent landscaping, extensive staircases, and many other remarkable amenities. While the definition is not strictly based on size, a good rule of thumb is that their floors cover at least 5,000-9000 square footage.</p>
+                <p>Rural home means a single-family moderately priced dwelling located in a rural area that will be owned and occu- pied as the rural homeowner’s principal residence.</p>
             </div>
 
             <div class="homebutton">
-                <a href="Homes.html">HOMES</a>
-            </div>
+                <a href="Homes.html">HOME</a>
+                </div>
 </body>
