--- a/client/public/Tiny House.html
+++ b/client/public/Tiny House.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-    <div class="wrapper bs4-man">
+    <div class="wrapper bs4-tin">
         <section class="clp-section clp-section-wts">
             <div class="d-flex w-100 realator blue-bar -bg justify-content-center">
                 <h2 class="mb-0">Realtors Pending for Passions</h2>
             </div>
 
             <div class="container mt-2">
-                <p>Mansions are large, luxurious residential properties characterized by classy designs, high-quality materials, magnificent landscaping, extensive staircases, and many other remarkable amenities. While the definition is not strictly based on size, a good rule of thumb is that their floors cover at least 5,000-9000 square footage.</p>
+                <p>Tiny house and "tiny house with wheels" means a dwelling to be used as permanent housing with permanent provisions for living, sleeping, eating, cooking, and sanitation built in accordance with the state building code.</p>
             </div>
 
             <div class="homebutton">
-                <a href="Homes.html">HOMES</a>
-            </div>
+                <a href="homes.html">HOMES</a>
+                </div>
 </body>
