Changes Color of text

--- a/client/public/homes.html
+++ b/client/public/homes.html
@@ -70,15 +70,24 @@
                     </div>
             </div>
     </section>
-
-    <section class="clp-section clp-section-space">
-    </section>   
-    
-    <section class="clp-section clp-section">
-        <div class="d-flex w-100 realator blue-bar <!-- Color -->-bg justify-content-center">
-            <h2 class="mb-0"><a href="/Index.html">Interactive Map</a></h2>
-        </div>
-    </section>
+    <div class="wrapper bs4-hom">
+        <section class="clp-section clp-section-space">
+        </section>   
+            <section class="clp-section clp-section">
+            <div class="d-flex w-100 realator blue-bar <!-- Color -->-bg justify-content-center">
+                <h2 class="mb-0"><a href="https://www.usamortgage.com/mortgage-calculators/">Mortgage Calculator</a></h2>
+            </div>
+        </section>
+        <section class="clp-section clp-section-space">
+        </section>   
+        <section class="clp-section clp-section">
+            <div class="d-flex w-100 realator blue-bar <!-- Color -->-bg justify-content-center">
+                <h2 class="mb-0"><a href="/Index.html">Interactive Map</a></h2>
+            </div>
+        </section>
+            <section class="clp-section clp-section-space">
+        </section>   
+    </div>
 
 </body>
 
