--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>Map</h1>
     <h1><a href="homes.html">Home Types</a></h1>
+    <h1>THIS IS COOL</h1>
     <div id="map"></div>
 </body>
 </html>
