modified:   client/public/homes.html

--- a/client/public/homes.html
+++ b/client/public/homes.html
@@ -82,7 +82,7 @@
         </section>   
         <section class="clp-section clp-section">
             <div class="d-flex w-100 realator blue-bar <!-- Color -->-bg justify-content-center">
-                <h2 class="mb-0"><a href="/Index.html">Interactive Map</a></h2>
+                <h2 class="mb-0"><a href="index.html">Interactive Map</a></h2>
             </div>
         </section>
             <section class="clp-section clp-section-space">
