new file:   client/401.html 	new file:   client/404.html 	modified:   client/about-relators.html 	modified:   client/community-support.html 	modified:   client/contact-us.html 	new file:   client/detail_contact-forms.html 	modified:   client/index.html 	modified:   client/interactive-map.html 	new file:   client/magnificent-mansions.html 	modified:   client/mortgage-calculator.html 	new file:   client/rural-homes.html 	new file:   client/search.html 	new file:   client/tiny-homes.html

--- a/client/about-relators.html
+++ b/client/about-relators.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Nov 12 2022 02:40:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Nov 27 2022 16:55:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="636821c1fe9d3c82e8ae3af2" data-wf-site="63541b9be708dc13f63a4a8b">
 <head>
   <meta charset="utf-8">
@@ -19,17 +19,120 @@
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="w-nav-brand"><img width="65" loading="lazy" src="images/Fake-Logo.jpg" alt="" class="image"></a>
+      <a href="#" class="w-nav-brand"><img width="65" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" src="images/Logo.jpg" loading="lazy" sizes="65px" alt="" class="image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" class="nav-link w-nav-link"><strong class="bold-text">Home</strong></a>
-        <a href="contact-us.html" class="w-nav-link"><strong>Contact Us</strong></a>
-        <a href="interactive-map.html" class="w-nav-link"><strong>Interactive Map</strong></a>
-        <a href="about-relators.html" aria-current="page" class="w-nav-link w--current"><strong>About Relators</strong></a>
-        <a href="mortgage-calculator.html" class="w-nav-link"><strong>Mortgage Calculator</strong></a>
-        <a href="community-support.html" class="w-nav-link"><strong>Community Support</strong></a>
+        <a href="index.html" class="nav-link w-nav-link"><strong>Home</strong></a>
+        <a href="contact-us.html" class="nav-link-2 w-nav-link"><strong>Contact Us</strong></a>
+        <a href="interactive-map.html" class="nav-link-3 w-nav-link"><strong>Interactive Map</strong></a>
+        <a href="about-relators.html" aria-current="page" class="nav-link-4 w-nav-link w--current"><strong>About Relators</strong></a>
+        <a href="mortgage-calculator.html" class="nav-link-5 w-nav-link"><strong>Mortgage Calculator</strong></a>
+        <a href="community-support.html" class="nav-link-6 w-nav-link"><strong>Community Support</strong></a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
+      </div>
+    </div>
+  </div>
+  <div class="section-7 wf-section">
+    <div class="columns-6 w-row">
+      <div class="w-col w-col-3">
+        <div><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 479px) 24vw, 100px" alt=""></div>
+      </div>
+      <div class="w-col w-col-9">
+        <div>
+          <h1 class="heading-22">Get to know the team</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section-6 wf-section">
+    <div>
+      <div class="columns-5 w-row">
+        <div class="column-6 w-col w-col-3">
+          <div class="div-block-39"><img src="images/Realtor-Pic-1.jpg" loading="lazy" srcset="images/Realtor-Pic-1-p-500.jpg 500w, images/Realtor-Pic-1.jpg 586w" sizes="25vw" alt="" class="image-15"></div>
+        </div>
+        <div class="column-9 w-col w-col-9">
+          <div class="div-block-40">
+            <h1 class="heading-23">Realtor&#x27;s name...</h1>
+            <h2 class="heading-4">• • • • • • • • • • • • •</h2>
+            <p class="paragraph-23"><span class="text-span-18"><strong>Personal History...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p class="paragraph-24"><span class="text-span-19"><strong>Points of interest...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p class="paragraph-25"><span class="text-span-19"><strong>Special skills...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section-6 wf-section">
+    <div class="div-block-41">
+      <div class="columns-5 w-row">
+        <div class="column-10 w-col w-col-9">
+          <div class="div-block-40">
+            <h1 class="heading-24">Realtor&#x27;s name...</h1>
+            <h2 class="heading-4">• • • • • • • • • • • • •</h2>
+            <p class="paragraph-26"><span class="text-span-18"><strong>Personal History...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p class="paragraph-27"><span class="text-span-19"><strong>Points of interest...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p class="paragraph-28"><span class="text-span-19"><strong>Special skills...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          </div>
+        </div>
+        <div class="column-7 w-col w-col-3">
+          <div class="div-block-39"><img src="images/Realtor-Pic-2.jpg" loading="lazy" srcset="images/Realtor-Pic-2.jpg 500w, images/Realtor-Pic-2.jpg 562w" sizes="25vw" alt="" class="image-15"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section-6 wf-section">
+    <div>
+      <div class="columns-5 w-row">
+        <div class="column-8 w-col w-col-3">
+          <div class="div-block-39"><img src="images/Realtor-Pic-3.jpg" loading="lazy" srcset="images/Realtor-Pic-3.jpg 500w, images/Realtor-Pic-3.jpg 615w" sizes="25vw" alt="" class="image-15"></div>
+        </div>
+        <div class="column-11 w-col w-col-9">
+          <div class="div-block-40">
+            <h1 class="heading-25">Realtor&#x27;s name...</h1>
+            <h2 class="heading-4">• • • • • • • • • • • • •</h2>
+            <p class="paragraph-29"><span class="text-span-18"><strong>Personal History...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p class="paragraph-30"><span class="text-span-19"><strong>Points of interest...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p class="paragraph-31"><span class="text-span-19"><strong>Special skills...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="wf-section">
+    <div class="div-block-18">
+      <div class="w-row">
+        <div class="w-col w-col-3">
+          <div class="div-block-19"><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="100px" alt=""></div>
+        </div>
+        <div class="column-2 w-col w-col-3">
+          <div class="div-block-20">
+            <a href="#" class="link">• Donate to Community Support...<br>‍</a>
+            <a href="#" class="link">• The Passions Difference...<br>‍</a>
+            <a href="#" class="link">• Contact Us...</a>
+          </div>
+        </div>
+        <div class="w-col w-col-3">
+          <div>
+            <div class="div-block-21">
+              <a href="#" class="link">• New Listings...<br>‍</a>
+              <a href="#" class="link">• Leadership...<br>‍</a>
+              <a href="#" class="link">• News...</a>
+            </div>
+          </div>
+        </div>
+        <div class="w-col w-col-3">
+          <div>
+            <div class="div-block-22">
+              <a href="#" class="link">• Glossary of Real Estate...<br>‍</a>
+              <a href="#" class="link">• Industry Terms...<br>‍</a>
+              <a href="#" class="link">• Affiliates...</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="div-block-23">
+        <div><strong>™ Realtors Spending for Passions, LLC</strong></div>
       </div>
     </div>
   </div>
