--- a/client/community-support.html
+++ b/client/community-support.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Nov 12 2022 02:40:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Nov 27 2022 16:55:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6368222971d5e9190ab88708" data-wf-site="63541b9be708dc13f63a4a8b">
 <head>
   <meta charset="utf-8">
@@ -19,17 +19,126 @@
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="w-nav-brand"><img width="65" loading="lazy" src="images/Fake-Logo.jpg" alt="" class="image"></a>
+      <a href="#" class="w-nav-brand"><img width="65" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" src="images/Logo.jpg" loading="lazy" sizes="65px" alt="" class="image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" class="nav-link w-nav-link"><strong class="bold-text">Home</strong></a>
-        <a href="contact-us.html" class="w-nav-link"><strong>Contact Us</strong></a>
-        <a href="interactive-map.html" class="w-nav-link"><strong>Interactive Map</strong></a>
-        <a href="about-relators.html" class="w-nav-link"><strong>About Relators</strong></a>
-        <a href="mortgage-calculator.html" class="w-nav-link"><strong>Mortgage Calculator</strong></a>
-        <a href="community-support.html" aria-current="page" class="w-nav-link w--current"><strong>Community Support</strong></a>
+        <a href="index.html" class="nav-link w-nav-link"><strong>Home</strong></a>
+        <a href="contact-us.html" class="nav-link-2 w-nav-link"><strong>Contact Us</strong></a>
+        <a href="interactive-map.html" class="nav-link-3 w-nav-link"><strong>Interactive Map</strong></a>
+        <a href="about-relators.html" class="nav-link-4 w-nav-link"><strong>About Relators</strong></a>
+        <a href="mortgage-calculator.html" class="nav-link-5 w-nav-link"><strong>Mortgage Calculator</strong></a>
+        <a href="community-support.html" aria-current="page" class="nav-link-6 w-nav-link w--current"><strong>Community Support</strong></a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
+      </div>
+    </div>
+  </div>
+  <div class="wf-section">
+    <div class="div-block-24">
+      <h2 class="heading-15">Passions Community Support Programs</h2>
+      <h1 class="heading-18">• • • • • • • • • • • • • •</h1>
+      <p class="paragraph-22">Passions community suport programs... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+    </div>
+  </div>
+  <div data-delay="4000" data-animation="slide" class="slider-2 w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
+    <div class="w-slider-mask">
+      <div class="slide-4 w-slide">
+        <div class="div-block-26">
+          <div class="text-block-5">Community Cleanup</div>
+        </div>
+      </div>
+      <div class="slide-5 w-slide">
+        <div class="div-block-26">
+          <div class="text-block-5">Donation Drives</div>
+        </div>
+      </div>
+      <div class="slide-6 w-slide">
+        <div class="div-block-26">
+          <div class="text-block-5">Community Conservation</div>
+        </div>
+      </div>
+    </div>
+    <div class="w-slider-arrow-left">
+      <div class="w-icon-slider-left"></div>
+    </div>
+    <div class="w-slider-arrow-right">
+      <div class="w-icon-slider-right"></div>
+    </div>
+    <div class="w-slider-nav w-round"></div>
+  </div>
+  <div class="section-5 wf-section">
+    <div class="container-9 w-container">
+      <div>
+        <div class="columns-2 w-row">
+          <div class="w-col w-col-2">
+            <a href="#" class="w-inline-block"><img src="images/Logo.jpg" loading="lazy" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 44vw, (max-width: 991px) 104.65625px, 139.984375px" alt=""></a>
+          </div>
+          <div class="column-3 w-col w-col-10">
+            <a href="#" class="link-2"><strong class="bold-text-3">Volunteering Opportunity</strong></a>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="columns-3 w-row">
+          <div class="w-col w-col-2">
+            <a href="#" class="w-inline-block"><img src="images/Logo.jpg" loading="lazy" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 44vw, (max-width: 991px) 104.65625px, 139.984375px" alt=""></a>
+          </div>
+          <div class="column-4 w-col w-col-10">
+            <a href="#" class="link-2"><strong class="bold-text-2">Donation Opportunity</strong></a>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="columns-4 w-row">
+          <div class="w-col w-col-2">
+            <a href="#" class="w-inline-block"><img src="images/Logo.jpg" loading="lazy" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 44vw, (max-width: 991px) 104.65625px, 139.984375px" alt=""></a>
+          </div>
+          <div class="column-5 w-col w-col-10">
+            <a href="#" class="link-2"><strong class="bold-text">Conservation Opportunity</strong></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="wf-section">
+    <div class="div-block-29">
+      <h1 class="heading-16">• • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • •</h1>
+    </div>
+  </div>
+  <div class="wf-section">
+    <div class="div-block-18">
+      <div class="w-row">
+        <div class="w-col w-col-3">
+          <div class="div-block-19"><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="100px" alt=""></div>
+        </div>
+        <div class="column-2 w-col w-col-3">
+          <div class="div-block-20">
+            <a href="#" class="link">• Donate to Community Support...<br>‍</a>
+            <a href="#" class="link">• The Passions Difference...<br>‍</a>
+            <a href="#" class="link">• Contact Us...</a>
+          </div>
+        </div>
+        <div class="w-col w-col-3">
+          <div>
+            <div class="div-block-21">
+              <a href="#" class="link">• New Listings...<br>‍</a>
+              <a href="#" class="link">• Leadership...<br>‍</a>
+              <a href="#" class="link">• News...</a>
+            </div>
+          </div>
+        </div>
+        <div class="w-col w-col-3">
+          <div>
+            <div class="div-block-22">
+              <a href="#" class="link">• Glossary of Real Estate...<br>‍</a>
+              <a href="#" class="link">• Industry Terms...<br>‍</a>
+              <a href="#" class="link">• Affiliates...</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="div-block-23">
+        <div><strong>™ Realtors Spending for Passions, LLC</strong></div>
       </div>
     </div>
   </div>
