--- a/client/interactive-map.html
+++ b/client/interactive-map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Nov 12 2022 02:40:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Nov 27 2022 16:55:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63681b8085ecb4ea5fa68efa" data-wf-site="63541b9be708dc13f63a4a8b">
 <head>
   <meta charset="utf-8">
@@ -19,14 +19,14 @@
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="w-nav-brand"><img width="65" loading="lazy" src="images/Fake-Logo.jpg" alt="" class="image"></a>
+      <a href="#" class="w-nav-brand"><img width="65" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" src="images/Logo.jpg" loading="lazy" sizes="65px" alt="" class="image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" class="nav-link w-nav-link"><strong class="bold-text">Home</strong></a>
-        <a href="contact-us.html" class="w-nav-link"><strong>Contact Us</strong></a>
-        <a href="interactive-map.html" aria-current="page" class="w-nav-link w--current"><strong>Interactive Map</strong></a>
-        <a href="about-relators.html" class="w-nav-link"><strong>About Relators</strong></a>
-        <a href="mortgage-calculator.html" class="w-nav-link"><strong>Mortgage Calculator</strong></a>
-        <a href="community-support.html" class="w-nav-link"><strong>Community Support</strong></a>
+        <a href="index.html" class="nav-link w-nav-link"><strong>Home</strong></a>
+        <a href="contact-us.html" class="nav-link-2 w-nav-link"><strong>Contact Us</strong></a>
+        <a href="interactive-map.html" aria-current="page" class="nav-link-3 w-nav-link w--current"><strong>Interactive Map</strong></a>
+        <a href="about-relators.html" class="nav-link-4 w-nav-link"><strong>About Relators</strong></a>
+        <a href="mortgage-calculator.html" class="nav-link-5 w-nav-link"><strong>Mortgage Calculator</strong></a>
+        <a href="community-support.html" class="nav-link-6 w-nav-link"><strong>Community Support</strong></a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
