--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Nov 12 2022 02:40:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Nov 27 2022 16:55:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63541b9be708dc1fb73a4a8c" data-wf-site="63541b9be708dc13f63a4a8b">
 <head>
   <meta charset="utf-8">
@@ -15,39 +15,93 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
+  <div style="display:none;opacity:0" class="div-block-36">
+    <div class="div-block-37">
+      <div data-w-id="b69435ce-8d67-0069-9e25-621e083220b9" class="div-block-38"><img src="images/exit-icon.jpg" loading="lazy" width="22" alt="" class="image-14"></div>
+      <div class="text-block-16"><strong>Welcome and look around</strong></div>
+    </div>
+  </div>
+  <div class="div-block-30">
+    <div class="div-block-31">
+      <div class="div-block-35"><img src="images/exit-icon.jpg" loading="lazy" width="35" alt="" class="image-13"></div>
+      <div class="div-block-32">
+        <div class="div-block-33">
+          <div class="text-block-15"><strong class="bold-text-4">We want to hear from you...</strong></div>
+        </div>
+        <div class="w-form">
+          <form id="email-form" name="email-form" data-name="Email Form" method="get"><label for="name-2" class="field-label">Name</label><input type="text" class="text-field-2 w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="" id="name-2"><label for="email-3" class="field-label">Email Address</label><input type="email" class="text-field-3 w-input" maxlength="256" name="email-3" data-name="Email 3" placeholder="" id="email-3" required=""><label for="email-3" class="field-label">Phone Number</label><input type="email" class="text-field w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="" id="email-2" required=""><select id="field-2" name="field-2" data-name="Field 2" required="" class="select-field w-select">
+              <option value="">Please select one...</option>
+              <option value="First">Looking around</option>
+              <option value="Second">Buying a home</option>
+              <option value="Third">Selling a home</option>
+            </select><input type="submit" value="Send It" data-wait="Please wait..." class="submit-button w-button"></form>
+          <div class="w-form-done">
+            <div>Thank you! Your submission has been received!</div>
+          </div>
+          <div class="w-form-fail">
+            <div>Oops! Something went wrong while submitting the form.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="w-nav-brand"><img width="65" loading="lazy" src="images/Fake-Logo.jpg" alt="" class="image"></a>
+      <a href="#" class="w-nav-brand"><img width="65" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" src="images/Logo.jpg" loading="lazy" sizes="65px" alt="" class="image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current"><strong class="bold-text">Home</strong></a>
-        <a href="contact-us.html" class="w-nav-link"><strong>Contact Us</strong></a>
-        <a href="interactive-map.html" class="w-nav-link"><strong>Interactive Map</strong></a>
-        <a href="about-relators.html" class="w-nav-link"><strong>About Relators</strong></a>
-        <a href="mortgage-calculator.html" class="w-nav-link"><strong>Mortgage Calculator</strong></a>
-        <a href="community-support.html" class="w-nav-link"><strong>Community Support</strong></a>
+        <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current"><strong>Home</strong></a>
+        <a href="contact-us.html" class="nav-link-2 w-nav-link"><strong>Contact Us</strong></a>
+        <a href="interactive-map.html" class="nav-link-3 w-nav-link"><strong>Interactive Map</strong></a>
+        <a href="about-relators.html" class="nav-link-4 w-nav-link"><strong>About Relators</strong></a>
+        <a href="mortgage-calculator.html" class="nav-link-5 w-nav-link"><strong>Mortgage Calculator</strong></a>
+        <a href="community-support.html" class="nav-link-6 w-nav-link"><strong>Community Support</strong></a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
+  <div class="container-8 w-container">
+    <div class="w-row">
+      <div class="w-col w-col-4">
+        <div>
+          <a href="#" data-w-id="8593868f-363c-b41a-c4dd-c98cb0703cdb" class="button w-button"><strong>Looking around ?</strong></a>
+        </div>
+      </div>
+      <div class="w-col w-col-4">
+        <div>
+          <a href="#Selection" class="button w-button"><strong>Buying a home ?</strong></a>
+        </div>
+      </div>
+      <div class="w-col w-col-4">
+        <div>
+          <a data-w-id="d3b0a2fe-a2cf-143b-b222-657a59260ffd" href="#" class="button w-button"><strong>Selling your home ?</strong></a>
+        </div>
+      </div>
+    </div>
+  </div>
   <div data-delay="4000" data-animation="slide" class="slider w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
     <div class="w-slider-mask">
       <div class="slide w-slide">
-        <a href="#Selection" class="button-3 w-button">Button Text</a>
-        <div class="container-1 w-container">
-          <div class="text-block-5"><strong class="bold-text-2">Magnificent Mansions</strong></div>
-        </div>
+        <a href="#Selection" class="link-block w-inline-block">
+          <div class="div-block-28">
+            <div class="text-block-5">Magnificent Mansions</div>
+          </div>
+        </a>
       </div>
       <div class="slide-2 w-slide">
-        <div class="container-1 w-container">
-          <div class="text-block-5"><strong>Tiny Homes</strong></div>
-        </div>
+        <a href="#Selection" class="link-block w-inline-block">
+          <div class="div-block-28">
+            <div class="text-block-5">Tiny Homes</div>
+          </div>
+        </a>
       </div>
       <div class="slide-3 w-slide">
-        <div class="container-1 w-container">
-          <div class="text-block-5"><strong>Rural Holmes</strong></div>
-        </div>
+        <a href="#Selection" class="link-block w-inline-block">
+          <div class="div-block-28">
+            <div class="text-block-5">Rural Homes</div>
+          </div>
+        </a>
       </div>
     </div>
     <div class="w-slider-arrow-left">
@@ -59,7 +113,7 @@
     <div class="w-slider-nav w-round"></div>
   </div>
   <div class="section wf-section">
-    <div class="container-3 w-container"><img src="images/Fake-Logo.jpg" loading="lazy" width="975" alt="" class="image-4">
+    <div class="container-3 w-container"><img src="images/Logo.jpg" loading="lazy" width="350" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 24vw, 350px" alt="" class="image-4">
       <div>
         <h1 class="heading-1">About the relator agency</h1>
         <h2 class="heading-4">• • • • • • • • • • • • •</h2>
@@ -111,7 +165,7 @@
   <div class="wf-section">
     <div class="container-5 w-container">
       <div class="w-row">
-        <div class="w-col w-col-6"><img src="images/weekend-stay.jpg" loading="lazy" width="323" alt=""></div>
+        <div class="w-col w-col-6"><img src="images/weekend-stay.jpg" loading="lazy" width="323" alt="weekend stay"></div>
         <div class="w-col w-col-6">
           <div>
             <h1>Special sells edge</h1>
@@ -149,19 +203,19 @@
     </div>
     <div>
       <div class="w-row">
-        <div class="w-col w-col-4"><img src="images/Big-Mansion-med.jpg" loading="lazy" srcset="images/Big-Mansion-med-p-500.jpg 500w, images/Big-Mansion-med-p-800.jpg 800w, images/Big-Mansion-med.jpg 1000w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 3225px) 31vw, 1000px" alt="">
+        <div class="w-col w-col-4"><img src="images/Big-Mansion-med.jpg" loading="lazy" srcset="images/Big-Mansion-med-p-500.jpg 500w, images/Big-Mansion-med-p-800.jpg 800w, images/Big-Mansion-med.jpg 1000w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 3225px) 31vw, 1000px" alt="Mansion">
           <div class="div-block-5">
-            <a href="about-relators.html" class="button w-button"><strong>Magnificent Mansions &gt;</strong></a>
+            <a href="magnificent-mansions.html" class="button w-button"><strong>Magnificent Mansions &gt;</strong></a>
           </div>
         </div>
-        <div class="w-col w-col-4"><img src="images/Tiny-House-med.jpg" loading="lazy" srcset="images/Tiny-House-med-p-500.jpg 500w, images/Tiny-House-med-p-800.jpg 800w, images/Tiny-House-med.jpg 999w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 3222px) 31vw, 999px" alt="">
+        <div class="w-col w-col-4"><img src="images/Tiny-House-med.jpg" loading="lazy" srcset="images/Tiny-House-med-p-500.jpg 500w, images/Tiny-House-med-p-800.jpg 800w, images/Tiny-House-med.jpg 999w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 3222px) 31vw, 999px" alt="Tiny House">
           <div class="div-block-6">
-            <a href="about-relators.html" class="button w-button"><strong>Tiny Homes &gt;</strong></a>
+            <a href="tiny-homes.html" class="button w-button"><strong>Tiny Homes &gt;</strong></a>
           </div>
         </div>
-        <div class="w-col w-col-4"><img src="images/Rural.jpg" loading="lazy" srcset="images/Rural-p-500.jpg 500w, images/Rural-p-800.jpg 800w, images/Rural.jpg 1000w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 3225px) 31vw, 1000px" alt="">
+        <div class="w-col w-col-4"><img src="images/Rural.jpg" loading="lazy" srcset="images/Rural-p-500.jpg 500w, images/Rural-p-800.jpg 800w, images/Rural.jpg 1000w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 3225px) 31vw, 1000px" alt="Rural House">
           <div class="div-block-7">
-            <a href="about-relators.html" class="button w-button"><strong>Rural Homes &gt;</strong></a>
+            <a href="rural-homes.html" class="button w-button"><strong>Rural Homes &gt;</strong></a>
           </div>
         </div>
       </div>
@@ -197,20 +251,26 @@
   </div>
   <div class="wf-section">
     <div class="container-6 w-container">
-      <h1>Affiliates (or partners) section</h1>
-      <p class="paragraph-13">Professionals... Reliable... (angie list style)</p>
-      <ul role="list">
-        <li class="list-item"><span class="text-span-12"><strong>Savings for referrals</strong></span>... save 10% on...</li>
-        <li class="list-item-2"><span class="text-span-14"><strong>Perk 2</strong></span>... description... </li>
-        <li class="list-item-3"><span class="text-span-13"><strong>Perk 3</strong></span>... description... </li>
-      </ul>
+      <div>
+        <p class="paragraph-20"><strong>Affiliates (or partners) section</strong></p>
+      </div>
+      <div class="div-block-14">
+        <p class="paragraph-13">Professionals... Reliable... (angie list style)</p>
+      </div>
+      <div class="div-block-15">
+        <ul role="list">
+          <li class="list-item"><span class="text-span-12"><strong>Savings for referrals</strong></span>... save 10% on...</li>
+          <li class="list-item-2"><span class="text-span-14"><strong>Perk 2</strong></span>... description... </li>
+          <li class="list-item-3"><span class="text-span-13"><strong>Perk 3</strong></span>... description... </li>
+        </ul>
+      </div>
     </div>
     <div>
       <div class="w-row">
         <div class="w-col w-col-4">
           <div>
             <div class="columns w-row">
-              <div class="column w-col w-col-3"><img src="images/Fake-Logo.jpg" loading="lazy" width="109" alt="" class="image-8"></div>
+              <div class="column w-col w-col-3"><img src="images/Logo.jpg" loading="lazy" width="109" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 109px, 8vw" alt="" class="image-8"></div>
               <div class="w-col w-col-9">
                 <h3>Parent Company</h3>
               </div>
@@ -294,8 +354,80 @@
       </div>
     </div>
   </div>
-  <div class="wf-section"></div>
-  <div class="wf-section"></div>
+  <div class="wf-section">
+    <div class="container-5 w-container">
+      <div class="w-row">
+        <div class="column-1 w-col w-col-6"><img src="images/Logo.jpg" loading="lazy" width="323" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 479px) 92vw, 323px" alt="" class="image-12"></div>
+        <div class="w-col w-col-6">
+          <div>
+            <h1>The Realtors Pending for Passions Family </h1>
+          </div>
+          <h2 class="heading-4">• • • • • • • • • • • • •</h2>
+          <div>
+            <p>The conclution... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <div>
+              <p>Concluding what you represent... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="wf-section">
+    <div class="div-block-16">
+      <div class="container-7 w-container">
+        <div>
+          <h1 class="heading-14">Final sales pitch</h1>
+        </div>
+        <div>
+          <h2 class="heading-4">• • • • • • • • • • • • •</h2>
+        </div>
+        <div>
+          <p class="paragraph-21">We have been dedicated...Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
+        <div class="div-block-17">
+          <a href="interactive-map.html" class="button w-button"><strong>Interactive Map &gt;</strong></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="wf-section">
+    <div class="div-block-18">
+      <div class="w-row">
+        <div class="w-col w-col-3">
+          <div class="div-block-19"><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="100px" alt=""></div>
+        </div>
+        <div class="column-2 w-col w-col-3">
+          <div class="div-block-20">
+            <a href="#" class="link">• Donate to Community Support...<br>‍</a>
+            <a href="#" class="link">• The Passions Difference...<br>‍</a>
+            <a href="#" class="link">• Contact Us...</a>
+          </div>
+        </div>
+        <div class="w-col w-col-3">
+          <div>
+            <div class="div-block-21">
+              <a href="#" class="link">• New Listings...<br>‍</a>
+              <a href="#" class="link">• Leadership...<br>‍</a>
+              <a href="#" class="link">• News...</a>
+            </div>
+          </div>
+        </div>
+        <div class="w-col w-col-3">
+          <div>
+            <div class="div-block-22">
+              <a href="#" class="link">• Glossary of Real Estate...<br>‍</a>
+              <a href="#" class="link">• Industry Terms...<br>‍</a>
+              <a href="#" class="link">• Affiliates...</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="div-block-23">
+        <div><strong>™ Realtors Spending for Passions, LLC</strong></div>
+      </div>
+    </div>
+  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63541b9be708dc13f63a4a8b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
