--- a/client/mortgage-calculator.html
+++ b/client/mortgage-calculator.html
@@ -32,6 +32,10 @@
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
+    <div>
+      <iframe id="iframe" src="https://mortgage-calculator.net/widget/amortization.html" title="mortgage calculator" style="width:100%;border:none;"></iframe><script>window.onmessage=(e=>{e.data.hasOwnProperty("frameHeight")&&(document.getElementById("iframe").style.height=`${e.data.frameHeight+30}px`)});</script>
+      <div style="text-align:center;"><a href="https://mortgage-calculator.net" style="color:#343A40;text-decoration:none;font-size:14px;">Mortgage Calculator</a></div>
+    </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63541b9be708dc13f63a4a8b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
