--- a/client/interactive-map.html
+++ b/client/interactive-map.html
@@ -13,12 +13,11 @@
   <link href="css/cs499.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <script src="./node_modules/axios/dist/axios.min.js"></script>
   <script type="text/Javascript" src="./js/map.js"></script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body>
+<body style="height: 100%; margin: 0; padding: 0;">
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
       <a href="#" class="w-nav-brand"><img width="65" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" src="images/Logo.jpg" loading="lazy" sizes="65px" alt="" class="image"></a>
@@ -35,7 +34,7 @@
       </div>
     </div>
   </div>
-  
+  <div style="height: 100%;" id="map"></div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63541b9be708dc13f63a4a8b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
