--- a/client/mortgage-calculator.html
+++ b/client/mortgage-calculator.html
@@ -37,6 +37,43 @@
       <iframe id="iframe" src="https://mortgage-calculator.net/widget/amortization.html" title="mortgage calculator" style="width:100%;border:none;"></iframe><script>window.onmessage=(e=>{e.data.hasOwnProperty("frameHeight")&&(document.getElementById("iframe").style.height=`${e.data.frameHeight+30}px`)});</script>
       <div style="text-align:center;"><a href="https://mortgage-calculator.net" style="color:#343A40;text-decoration:none;font-size:14px;">Mortgage Calculator</a></div>
     </div>
+          <div class="wf-section">
+              <div class="div-block-18">
+                <div class="w-row">
+                    <div class="w-col w-col-3">
+                    <div class="div-block-19"><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="100px" alt=""></div>
+                    </div>
+                    <div class="column-2 w-col w-col-3">
+                    <div class="div-block-20">
+                        <a href="#" class="link">• Donate to Community Support...<br>‍</a>
+                        <a href="#" class="link">• The Passions Difference...<br>‍</a>
+                        <a href="#" class="link">• Contact Us...</a>
+                    </div>
+                    </div>
+                    <div class="w-col w-col-3">
+                    <div>
+                        <div class="div-block-21">
+                        <a href="#" class="link">• New Listings...<br>‍</a>
+                        <a href="#" class="link">• Leadership...<br>‍</a>
+                        <a href="#" class="link">• News...</a>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="w-col w-col-3">
+                    <div>
+                        <div class="div-block-22">
+                        <a href="#" class="link">• Glossary of Real Estate...<br>‍</a>
+                        <a href="#" class="link">• Industry Terms...<br>‍</a>
+                        <a href="#" class="link">• Affiliates...</a>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <div class="div-block-23">
+                    <div><strong>™ Realtors Spending for Passions, LLC</strong></div>
+                </div>
+              </div>
+        </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63541b9be708dc13f63a4a8b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
