Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   client/about-relators.html
	modified:   client/community-support.html
	modified:   client/css/cs499.webflow.css
	modified:   client/index.html

--- a/client/community-support.html
+++ b/client/community-support.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Nov 27 2022 16:55:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 01 2022 04:35:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6368222971d5e9190ab88708" data-wf-site="63541b9be708dc13f63a4a8b">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="w-nav-brand"><img width="65" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" src="images/Logo.jpg" loading="lazy" sizes="65px" alt="" class="image"></a>
+      <a href="#" class="w-nav-brand"><img width="65" srcset="images/Logo-p-500.jpg 500w, images/Logo.jpg 568w" src="images/Logo.jpg" loading="lazy" sizes="65px" alt="" class="image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav-link w-nav-link"><strong>Home</strong></a>
         <a href="contact-us.html" class="nav-link-2 w-nav-link"><strong>Contact Us</strong></a>
@@ -37,7 +37,7 @@
     <div class="div-block-24">
       <h2 class="heading-15">Passions Community Support Programs</h2>
       <h1 class="heading-18">• • • • • • • • • • • • • •</h1>
-      <p class="paragraph-22">Passions community suport programs... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="paragraph-22">At Realtors Pending for Passions <br><br> we are about giving back to the <br><br>community. </p>
     </div>
   </div>
   <div data-delay="4000" data-animation="slide" class="slider-2 w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
@@ -71,7 +71,7 @@
       <div>
         <div class="columns-2 w-row">
           <div class="w-col w-col-2">
-            <a href="#" class="w-inline-block"><img src="images/Logo.jpg" loading="lazy" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 44vw, (max-width: 991px) 104.65625px, 139.984375px" alt=""></a>
+            <a href="#" class="w-inline-block"><img src="images/Logo.jpg" loading="lazy" srcset="images/Logo-p-500.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 44vw, (max-width: 991px) 104.65625px, 139.984375px" alt=""></a>
           </div>
           <div class="column-3 w-col w-col-10">
             <a href="#" class="link-2"><strong class="bold-text-3">Volunteering Opportunity</strong></a>
@@ -81,7 +81,7 @@
       <div>
         <div class="columns-3 w-row">
           <div class="w-col w-col-2">
-            <a href="#" class="w-inline-block"><img src="images/Logo.jpg" loading="lazy" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 44vw, (max-width: 991px) 104.65625px, 139.984375px" alt=""></a>
+            <a href="#" class="w-inline-block"><img src="images/Logo.jpg" loading="lazy" srcset="images/Logo-p-500.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 44vw, (max-width: 991px) 104.65625px, 139.984375px" alt=""></a>
           </div>
           <div class="column-4 w-col w-col-10">
             <a href="#" class="link-2"><strong class="bold-text-2">Donation Opportunity</strong></a>
@@ -91,7 +91,7 @@
       <div>
         <div class="columns-4 w-row">
           <div class="w-col w-col-2">
-            <a href="#" class="w-inline-block"><img src="images/Logo.jpg" loading="lazy" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 44vw, (max-width: 991px) 104.65625px, 139.984375px" alt=""></a>
+            <a href="#" class="w-inline-block"><img src="images/Logo.jpg" loading="lazy" srcset="images/Logo-p-500.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 767px) 44vw, (max-width: 991px) 104.65625px, 139.984375px" alt=""></a>
           </div>
           <div class="column-5 w-col w-col-10">
             <a href="#" class="link-2"><strong class="bold-text">Conservation Opportunity</strong></a>
@@ -109,7 +109,7 @@
     <div class="div-block-18">
       <div class="w-row">
         <div class="w-col w-col-3">
-          <div class="div-block-19"><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="100px" alt=""></div>
+          <div class="div-block-19"><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo-p-500.jpg 500w, images/Logo.jpg 568w" sizes="100px" alt=""></div>
         </div>
         <div class="column-2 w-col w-col-3">
           <div class="div-block-20">
