--- a/client/about-relators.html
+++ b/client/about-relators.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Nov 27 2022 16:55:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 01 2022 04:35:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="636821c1fe9d3c82e8ae3af2" data-wf-site="63541b9be708dc13f63a4a8b">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="container w-container">
-      <a href="#" class="w-nav-brand"><img width="65" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" src="images/Logo.jpg" loading="lazy" sizes="65px" alt="" class="image"></a>
+      <a href="#" class="w-nav-brand"><img width="65" srcset="images/Logo-p-500.jpg 500w, images/Logo.jpg 568w" src="images/Logo.jpg" loading="lazy" sizes="65px" alt="" class="image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav-link w-nav-link"><strong>Home</strong></a>
         <a href="contact-us.html" class="nav-link-2 w-nav-link"><strong>Contact Us</strong></a>
@@ -36,7 +36,7 @@
   <div class="section-7 wf-section">
     <div class="columns-6 w-row">
       <div class="w-col w-col-3">
-        <div><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 479px) 24vw, 100px" alt=""></div>
+        <div><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo-p-500.jpg 500w, images/Logo.jpg 568w" sizes="(max-width: 479px) 24vw, 100px" alt=""></div>
       </div>
       <div class="w-col w-col-9">
         <div>
@@ -49,15 +49,13 @@
     <div>
       <div class="columns-5 w-row">
         <div class="column-6 w-col w-col-3">
-          <div class="div-block-39"><img src="images/Realtor-Pic-1.jpg" loading="lazy" srcset="images/Realtor-Pic-1-p-500.jpg 500w, images/Realtor-Pic-1.jpg 586w" sizes="25vw" alt="" class="image-15"></div>
+          <div class="div-block-39"><img src="images/Realtor-Pic-1.jpg" loading="lazy" srcset="images/Realtor-Pic-1-p-500.jpg 500w, images/Realtor-Pic-1.jpg 586w" sizes="100vw" alt="" class="image-15"></div>
         </div>
         <div class="column-9 w-col w-col-9">
           <div class="div-block-40">
-            <h1 class="heading-23">Realtor&#x27;s name...</h1>
+            <h1 class="heading-23">April Creech</h1>
             <h2 class="heading-4">• • • • • • • • • • • • •</h2>
-            <p class="paragraph-23"><span class="text-span-18"><strong>Personal History...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-            <p class="paragraph-24"><span class="text-span-19"><strong>Points of interest...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-            <p class="paragraph-25"><span class="text-span-19"><strong>Special skills...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p class="paragraph-23"><span class="text-span-18"><strong>About April</strong></span><strong> </strong><strong><br><br>April love setting people up with the home of their dreams. She loves finding houses that people make into their homes. In her free time she enjoys kayaking and spending time with family. </strong></p>
           </div>
         </div>
       </div>
@@ -68,15 +66,13 @@
       <div class="columns-5 w-row">
         <div class="column-10 w-col w-col-9">
           <div class="div-block-40">
-            <h1 class="heading-24">Realtor&#x27;s name...</h1>
+            <h1 class="heading-24">McKelvey Steger</h1>
             <h2 class="heading-4">• • • • • • • • • • • • •</h2>
-            <p class="paragraph-26"><span class="text-span-18"><strong>Personal History...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-            <p class="paragraph-27"><span class="text-span-19"><strong>Points of interest...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-            <p class="paragraph-28"><span class="text-span-19"><strong>Special skills...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p class="paragraph-29"><span class="text-span-18"><strong>About McKelvey</strong></span><strong> <br><br>McKelvey has been a realtor since 2017. She has sold more then 100 homes in Missouri alone! She enjoys hiking in her free time.</strong></p>
           </div>
         </div>
         <div class="column-7 w-col w-col-3">
-          <div class="div-block-39"><img src="images/Realtor-Pic-2.jpg" loading="lazy" srcset="images/Realtor-Pic-2.jpg 500w, images/Realtor-Pic-2.jpg 562w" sizes="25vw" alt="" class="image-15"></div>
+          <div class="div-block-39"><img src="images/Realtor-Pic-2.jpg" loading="lazy" srcset="images/Realtor-Pic-2-p-500.jpg 500w, images/Realtor-Pic-2.jpg 562w" sizes="100vw" alt="" class="image-15"></div>
         </div>
       </div>
     </div>
@@ -85,15 +81,13 @@
     <div>
       <div class="columns-5 w-row">
         <div class="column-8 w-col w-col-3">
-          <div class="div-block-39"><img src="images/Realtor-Pic-3.jpg" loading="lazy" srcset="images/Realtor-Pic-3.jpg 500w, images/Realtor-Pic-3.jpg 615w" sizes="25vw" alt="" class="image-15"></div>
+          <div class="div-block-39"><img src="images/Realtor-Pic-3.jpg" loading="lazy" srcset="images/Realtor-Pic-3-p-500.jpg 500w, images/Realtor-Pic-3.jpg 615w" sizes="100vw" alt="" class="image-15"></div>
         </div>
         <div class="column-11 w-col w-col-9">
           <div class="div-block-40">
-            <h1 class="heading-25">Realtor&#x27;s name...</h1>
+            <h1 class="heading-25">Presley Angle</h1>
             <h2 class="heading-4">• • • • • • • • • • • • •</h2>
-            <p class="paragraph-29"><span class="text-span-18"><strong>Personal History...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-            <p class="paragraph-30"><span class="text-span-19"><strong>Points of interest...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-            <p class="paragraph-31"><span class="text-span-19"><strong>Special skills...</strong></span><strong> </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <p class="paragraph-29"><span class="text-span-18"><strong>About Presley</strong><br><br>‍</span><strong>Presley is a top performing realtor at Ritter Real Estate beginning in 2017. During her years with the company she has sold more than $20,000,000 in real estate plus helped people buy and sell real estate from all over the world; including two different countries, seven states, and countless counties all over Missouri. </strong></p>
           </div>
         </div>
       </div>
@@ -103,7 +97,7 @@
     <div class="div-block-18">
       <div class="w-row">
         <div class="w-col w-col-3">
-          <div class="div-block-19"><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo.jpg 500w, images/Logo.jpg 568w" sizes="100px" alt=""></div>
+          <div class="div-block-19"><img src="images/Logo.jpg" loading="lazy" width="100" srcset="images/Logo-p-500.jpg 500w, images/Logo.jpg 568w" sizes="100px" alt=""></div>
         </div>
         <div class="column-2 w-col w-col-3">
           <div class="div-block-20">
