--- a/client/index.html
+++ b/client/index.html
@@ -52,7 +52,7 @@
         <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current"><strong>Home</strong></a>
         <a href="contact-us.html" class="nav-link-2 w-nav-link"><strong>Contact Us</strong></a>
         <a href="interactive-map.html" class="nav-link-3 w-nav-link"><strong>Interactive Map</strong></a>
-        <a href="about-relators.html" class="nav-link-4 w-nav-link"><strong>About Relators</strong></a>
+        <a href="about-relators.html" class="nav-link-4 w-nav-link"><strong>About Realtors</strong></a>
         <a href="mortgage-calculator.html" class="nav-link-5 w-nav-link"><strong>Mortgage Calculator</strong></a>
         <a href="community-support.html" class="nav-link-6 w-nav-link"><strong>Community Support</strong></a>
       </nav>
