--- a/client/contact-us.html
+++ b/client/contact-us.html
@@ -29,7 +29,7 @@
         </div>
         </div>
     </div>
-    <form action="https://send.pageclip.co/Rb61Vl6Gslay5FzQ3DhfaXE1nnpx4Jlu" class="pageclip-form" method="post">
+        <form action="https://send.pageclip.co/22nZVqVncusgPC7GcI3jQPiqHXm0vrGp/contact-form"method="post" class="pageclip-form">
         <h1 class="formHeading">Contact Us</h1>
         <!-- Replace these inputs with your own. Make sure they have a "name" attribute! -->
         <input type="text" name="Name" class="Name" placeholder="Name" required/>
